# mv-hofki-vue-pyhton

./: .env.example  .gitattributes  .gitignore  .initialized  .pre-commit-config.yaml  CLAUDE.md  alembic.ini  azure-pipelines.yml  init.sh  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  aliases.sh  ccstatusline-settings.json  devcontainer.json  docker-compose.yml  health-check.sh  initialize.sh  mcp-keepalive-proxy.js  post-create.sh  post-start.sh  setup-mcp-proxy.sh  ttyd-index.html
alembic/: env.py
alembic/versions/: 15139d895f40_add_end_barline_to_detected_measures.py  160265864122_add_alternatives_json_to_detected_.py  1d3f2a89280f_initial_schema.py  1ee4e48e5658_ui_improvements_storage_location_drop_.py  2cbdde7a68e8_add_staff_removal_symbol_padding_to_.py  2d756303e6cc_add_deskew_method_to_scanner_config.py  2e9b06b45cda_add_dewarp_config_fields.py  3a7ad6f8d14a_replace_position_on_staff_with_staff_.py  41f91513cb32_add_category_and_catalog_number_to_scan_.py  4ba93c0f6d82_add_check_constraint_source_line_.py  642a8244b50e_restructure_adjustments_json_to_grouped_.py  73b7a5de5b97_add_instrument_invoices_table.py  74b05fa3a239_add_filtered_fields_to_detected_symbols.py  85d27ee9935e_update_instrument_invoices_add_title_.py  869c1ea9279f_remove_corrected_image_path_and_.py  86a117ea2a72_add_detected_measures_table.py  a04c69cf5072_add_height_in_lines_to_symbol_variants.py  a0d2e422b2ff_add_line_thickness_to_staves_and_staff_.py  af1199d3ac7f_add_source_line_spacing_to_symbol_.py  b07fca376e34_phase2_initial_schema.py  c5c180fff12d_add_instrument_images_table.py  c91a3d75630f_add_scanner_tables.py  cbfa11db09c9_add_scanner_config_table.py  (+1 more)
docs/superpowers/: STATUS.md
e2e/: example.spec.js  package-lock.json  package.json  playwright.config.js
samplefiles/: Inhaltsverzeichnis.md
sql_scripts/: mvHofki.ms-sql.sql
(+252 files in other folders)
