[project]
name = "mv_hofki"
version = "0.1.0"
description = "mv_hofki — FastAPI + Vue 3 full-stack template"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic-settings>=2.0,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<4",
    "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
pythonpath = ["src/backend"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src/backend"]

[tool.ruff]
src = ["src/backend"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src/backend"
packages = ["mv_hofki"]
strict = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_errors = true
